--- a/css/main.css
+++ b/css/main.css
@@ -44,12 +44,15 @@ footer {
   align-items: center;
   background: #222;
 }
+ 
+
 .game {
   width: 100%;
   height: 100%;
-  background: url(../img/deathstar.jpg) center/cover;
-  animation: scroll-background 100s linear infinite;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  background: 
+  url("/img/Tatooine.jpg") center/cover no-repeat,
+  url("/img/deathstar.jpg") center/cover;
+  animation: scroll-background 500s linear infinite;
   position: relative;
 }
 
