--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ body {
 
 .title {
   font-size: 2em;
-  font-family: 'Star Jedi', arial;;
+  font-family: 'Star Jedi', arial;
   color:#FFE81F
 }
 .wrap {
